// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`st.u64(little) matches snapshots 1`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.u64(little) matches snapshots 2`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.u64(little) matches snapshots 3`] = `
ArrayBuffer [
  10,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.u64(little) matches snapshots 4`] = `
ArrayBuffer [
  245,
  255,
  255,
  255,
  255,
  255,
  255,
  255,
]
`;

exports[`st.u64(little) matches snapshots 5`] = `
ArrayBuffer [
  255,
  255,
  255,
  255,
  255,
  255,
  255,
  255,
]
`;

exports[`st.u64(big) matches snapshots 1`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.u64(big) matches snapshots 2`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.u64(big) matches snapshots 3`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  10,
]
`;

exports[`st.u64(big) matches snapshots 4`] = `
ArrayBuffer [
  255,
  255,
  255,
  255,
  255,
  255,
  255,
  245,
]
`;

exports[`st.u64(big) matches snapshots 5`] = `
ArrayBuffer [
  255,
  255,
  255,
  255,
  255,
  255,
  255,
  255,
]
`;

exports[`st.s64(little) matches snapshots 1`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.s64(little) matches snapshots 2`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  128,
]
`;

exports[`st.s64(little) matches snapshots 3`] = `
ArrayBuffer [
  10,
  0,
  0,
  0,
  0,
  0,
  0,
  128,
]
`;

exports[`st.s64(little) matches snapshots 4`] = `
ArrayBuffer [
  245,
  255,
  255,
  255,
  255,
  255,
  255,
  127,
]
`;

exports[`st.s64(little) matches snapshots 5`] = `
ArrayBuffer [
  255,
  255,
  255,
  255,
  255,
  255,
  255,
  127,
]
`;

exports[`st.s64(big) matches snapshots 1`] = `
ArrayBuffer [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.s64(big) matches snapshots 2`] = `
ArrayBuffer [
  128,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`st.s64(big) matches snapshots 3`] = `
ArrayBuffer [
  128,
  0,
  0,
  0,
  0,
  0,
  0,
  10,
]
`;

exports[`st.s64(big) matches snapshots 4`] = `
ArrayBuffer [
  127,
  255,
  255,
  255,
  255,
  255,
  255,
  245,
]
`;

exports[`st.s64(big) matches snapshots 5`] = `
ArrayBuffer [
  127,
  255,
  255,
  255,
  255,
  255,
  255,
  255,
]
`;
